--- a/README.Rmd
+++ b/README.Rmd
@@ -1,13 +1,22 @@
 ---
-title: "Analysis of The Drum hosts, panellists and guests"
-output: html_notebook
+output: github_document
 ---
+
+<!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>"
+)
+```
+
 
 # Analysis of The Drum hosts, panellists and guests
 
-This script scrapes data on the hosts, panellists and guests of [The Drum](www.abc.net.au/news/programs/the-drum) from the ABC website. If you just want to grab some tidy data, it's currently in [`drum_tidy.csv`](drum_tidy.csv). It goes back a year, as far as I can tell.
+This script scrapes data on the hosts, panellists and guests of [The Drum](www.abc.net.au/news/programs/the-drum) from the ABC website. If you just want to grab some tidy data, it's currently in [`drum_tidy.csv`](drum_tidy.csv). It goes back to 27 April 2018 (as at `r Sys.Date()`).
 
-**Note:** the formatted datetimes in the `dt` column are in UTC! You'll never to convert them to `"Australia/Sydney"` before using them.
+**Note:** the formatted datetimes in the `dt` column are in UTC! You'll need to convert them to `"Australia/Sydney"` before using them.
 
 To grab the data from the ABC site yourself, run this notebook!
 
@@ -37,7 +46,7 @@ episodes =
     episode_page =
       read_html(glue('{drum_url}?page={x}')) %>%
       html_nodes(glue('#{episodes_id} article'))
-    data_frame(
+    tibble(
       title       = episode_page %>% html_nodes('h3') %>% html_text(),
       description = episode_page %>% html_nodes('p') %>% html_text())
   }) %>%
